# mlip_pipeline

./: .coverage  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  DEPENDENCY_MANAGEMENT.md  LICENSE  README.md  SYSTEM_ARCHITECTURE.md  TESTING_STRATEGY.md  bad_structure.xyz  config.example.yaml  config.yaml  debug_ase.py  debug_script.py  debug_uat.py  docker-compose.yml  ds  dummy_file_for_thought.txt  full_log.txt  halt_info.txt  input.yaml  input_template.yaml  main.py  mlip_autopipec_checkpoint.json  mypy_final_final.txt  output.txt  pyproject.toml  pytest_final_final.txt  pytest_output.txt  reproduce_vacancy_bug.py  ruff_final_final.txt  si_eos.db  si_eos_config.yaml  test.py  test_output.txt  test_results.txt  test_results_all.txt  trajectory.xyz  (+7 more)
.github/workflows/: ci.yml
_work_md/job_one_shot/: data.lammps  dump.lammpstrj  in.lammps
_work_md/job_oneshot/: in.lammps
dev_documents/: ALL_SPEC.md  ARCH_ANALYSIS.md  FINAL_UAT.md  USER_TEST_SCENARIO.md
dev_documents/CYCLE01/: debug_log.txt  test_execution_log.txt
dev_documents/CYCLE02/: UAT_Cycle_02.ipynb  test_execution_log.txt  verify_schemas.py
dev_documents/CYCLE03/: test_execution_log.txt
dev_documents/CYCLE04/: test_execution_log.txt
dev_documents/CYCLE05/: test_execution_log.txt
dev_documents/CYCLE06/: test_execution_log.txt
dev_documents/CYCLE07/: test_execution_log.txt
dev_documents/CYCLE08/: test_execution_log.txt
dev_documents/CYCLE1/: test_execution_log.txt
dev_documents/CYCLE2/: test_execution_log.txt
dev_documents/CYCLE7/: test_execution_log.txt
dev_documents/CYCLE8/: test_execution_log.txt
dev_documents/phase01/: USER_TEST_SCENARIO.md
dev_documents/phase_1/: ALL_SPEC.md  (+2 more)
dummy_vib/: cache.0z+.json  cache.eq.json
examples/: config.yaml
mlip_autopipec/: README.md  __init__.py  app.py  config_schemas.py  exceptions.py  workflow_manager.py
scripts/: generate_notebooks.py
src/: main.py
templates/: report_template.html
tests/: common_constants.py  conftest.py  debug_embedding.py  generate_mock.py  test_a_generator.py  test_app.py  test_c_dft_factory.py  test_cli.py  test_config.py  test_config_factory.py  test_config_schemas.py  test_database.py  test_database_manager.py  test_dataset.py  test_domain_models.py  test_logging.py  test_main.py  test_mocks.py  test_monitoring.py  test_orchestrator.py  test_schemas.py  test_system_config.py  test_utils.py  test_workflow_manager.py  test_workspace.py
tmp_debug/: config.yaml
tutorial_data/: config.ini  deposit.xyz  in.deposit  substrate.xyz
tutorials/: 01_MgO_FePt_Training.ipynb  01_quickstart_silicon.ipynb  02_Deposition_and_Ordering.ipynb  02_Interface_Learning.ipynb  02_Oracle_Test.py  02_advanced_tio2.ipynb  03_Deposition_MD.ipynb  03_validation_suite.ipynb  04_Ordering_aKMC.ipynb  UAT_AND_TUTORIAL.ipynb  UAT_AND_TUTORIAL.py  verified_uat_v16.py
uat_work/: config.yaml
uat_workspace/: config.yaml
verification_output/: input.yaml
(+1089 files in other folders)
