
[project]
name = "auto_mlip"
version = "0.1.0"
authors = [
  { name="Tomoyuki Tsuyama", email="tomoyuki.tsuyaman@gmail.com" },
]
description = "Automated Machine Learning Interatomic Potential Pipeline"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ase>=3.27.0",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0",
    "typer>=0.21.1",
    "pandas>=2.2.0",
    "jinja2>=3.1.0",
    "phonopy>=2.20.0",
    "matplotlib>=3.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "types-pyyaml>=6.0.12.20250915",
    "pandas-stubs>=2.2.0.240218",
    "types-requests>=2.31.0.20240311",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
