[project]
name = "mlip-pipeline"
version = "0.1.0"
description = "A pipeline for Machine Learning Interatomic Potentials (MLIP) with Active Learning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.23.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
mlip-pipeline = "mlip_autopipec.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "types-PyYAML>=6.0.12.20240311",
]

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "N", "UP", "YTT", "ANN", "ASYNC", "S", "BLE", "B", "A", "C4", "DTZ", "T10", "EM", "ICN", "PIE", "T20", "PT", "RET", "SIM", "TID", "ARG", "PTH", "ERA", "PL", "TRY", "RUF"
]
ignore = [
    "ANN101", "ANN002", "ANN003", "ANN001", "ANN401", "ARG001", "ARG005", "PLR2004", "E501", "TRY003", "D", "ANN201", "N806", "PLC0415", "BLE001", "PT019", "RUF003", "ARG002", "RUF043", "RUF059", "PLR0913", "ANN202"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.hatch.build.targets.wheel]
packages = ["src/mlip_autopipec"]
